@@ -1,3 +1,7 @@
+* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.1-0
+- Update the upper bound of stdlib to < 6.0.0
+- Update a URL in the README.md
+
 * Thu Oct 11 2018 Nick Miller <nick.miller@onyxpoint.com> - 0.2.0-0
 - Added $dracut_ensure, $fipscheck_ensure and $nss_ensure parameters
   - Changed the packages from 'latest' to 'installed'
